--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
         "video-extract",
         "pyrogram"
     ],
-    "repository": "https://github.com/AshutoshGoswami24",
+    "repository": "https://github.com/animexboy/TxTLchBot",
     "success_url": "https://t.me/PandaWep",
     "stack": "container",
     "env": {
